# plugin-GUI

./: .gitignore  BrandRedisDataThread.h  CODE_REVIEW_REPORT.md  INSTALLATION_GUIDE.md  PROJECT_SUMMARY.md  README_Redis_Data_Simulator.md  RedisToOpenEphys_Documentation.md  RedisToOpenEphys_Implementation_Plan.md  benchmark_redis_performance.py  brandbci_integration_config.yaml  demo_brandbci_plugin.py  redis_data_simulator.py  test_brandbci_integration.py  test_redis_plugin.py  test_redis_stream_integration.py
Plugins/: CMakeLists.txt
Plugins/RedisDataThread/: CMakeLists.txt  CustomTooltipComponent.cpp  CustomTooltipComponent.h  InfoIconComponent.cpp  InfoIconComponent.h  OpenEphysLib.cpp  README.md  README_STREAMS.md  RedisChannelScanPopup.cpp  RedisChannelScanPopup.h  RedisConfigurationPanel.cpp  RedisConfigurationPanel.h  RedisConfigurationPopup.cpp  RedisConfigurationPopup.h  RedisConnectionTestPopup.cpp  RedisConnectionTestPopup.h  RedisDataDisplayPopup.cpp  RedisDataDisplayPopup.h  RedisDataThread.cpp  RedisDataThread.h  RedisDataThreadEditor.cpp  RedisDataThreadEditor.h  RedisDataThreadStub.cpp  RedisDataThreadStub.h  RedisHelpPopup.cpp  RedisHelpPopup.h  RedisSavePresetPopup.cpp  RedisSavePresetPopup.h  SECURITY_FEATURES.md  install.sh
Plugins/RedisDataThread/Tests/: CMakeLists.txt  simple_redis_test  simple_redis_test.cpp  test_brandbci_parser.cpp  test_integration.cpp  test_redis_streams.cpp  test_runner.cpp  test_stream_manager.cpp
Plugins/RedisDataThread/examples/: redis_data_sender.py
Resources/Configs/: redis_config.xml  redis_source_config.xml
